--- a/css/style.css
+++ b/css/style.css
@@ -856,10 +856,12 @@ body.mobile-nav-active #mobile-nav-toggle i {
 --------------------------------*/
 #team .team-block {
   box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);
-  height: 254px;
+  
+  height: 200px;
   overflow: hidden;
   position: relative;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 991px) {
@@ -898,8 +900,8 @@ body.mobile-nav-active #mobile-nav-toggle i {
 
 #team .team-block .team-content ul li a .fa {
   float: left;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   transition: 0.3s;
 }
 
